[package]
name = "feed_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
chrono = "0.4.23"
tokio = { version = "1", features = ["full"] }
reqwest = {version="0.11.13", features=["stream"]}
error-chain = "0.12.4"
async-trait = "0.1.59"
select = "0.5.0"